@@ -1,5 +1,5 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.015.
+# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.012.
 use strict;
 use warnings;
 
@@ -23,11 +23,10 @@ my %module_build_args = (
   "module_name" => "Catmandu::BibTeX",
   "recursive_test_files" => 1,
   "requires" => {
-    "BibTeX::Parser" => "1.02",
+    "BibTeX::Parser" => "1.03",
     "Catmandu" => "1.2002",
     "Clone" => 0,
     "LaTeX::Decode" => "0.05",
-    "LaTeX::ToUnicode" => "== 0.05",
     "Module::Build" => "0.4229",
     "Moo" => 0,
     "perl" => "v5.10.1"
