@@ -4,7 +4,7 @@
       "Nicolas Steenlant C<< <nicolas.steenlant at ugent.be> >>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.20, Dist::Zilla version 6.015, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Dist::Milla version v1.0.20, Dist::Zilla version 6.012, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "perl_5"
    ],
@@ -42,11 +42,10 @@
       },
       "runtime" : {
          "requires" : {
-            "BibTeX::Parser" : "1.02",
+            "BibTeX::Parser" : "1.03",
             "Catmandu" : "1.2002",
             "Clone" : "0",
             "LaTeX::Decode" : "0.05",
-            "LaTeX::ToUnicode" : "== 0.05",
             "Module::Build" : "0.4229",
             "Moo" : "0",
             "perl" : "v5.10.1"
@@ -77,9 +76,8 @@
       "Nicolas Steenlant <nicolas.steenlant@ugent.be>",
       "Vitali Peil <vitali.peil@uni-bielefeld.de>"
    ],
-   "x_generated_by_perl" : "v5.32.0",
-   "x_serialization_backend" : "Cpanel::JSON::XS version 4.19",
-   "x_spdx_expression" : "Artistic-1.0-Perl OR GPL-1.0-or-later",
+   "x_generated_by_perl" : "v5.30.0",
+   "x_serialization_backend" : "Cpanel::JSON::XS version 4.25",
    "x_static_install" : 0
 }
 
