@@ -3,9 +3,8 @@ requires 'perl', 'v5.10.1';
 test_requires 'Test2::V0', '>= 0.000122';
 
 requires 'Catmandu', '>= 1.2002';
-requires 'LaTeX::ToUnicode', '== 0.05'; # avoid unicode conversion bug in 0.11
-requires 'BibTeX::Parser', '>= 1.02';
-requires 'LaTeX::Decode', '0.05';
+requires 'BibTeX::Parser', '>= 1.03';
+requires 'LaTeX::Decode', '>=0.05';
 requires 'Module::Build', '>=0.4229'; # travis ci
 requires 'Moo', '0';
 requires 'Clone', '0';
