@@ -1,6 +1,8 @@
 Revision history for Catmandu-BibTeX
 
 {{$NEXT}}
+  - update tests to work with latest BibTeX::Parser (page range divider is now
+    long dash)
 
 0.19  2021-01-25 13:14:08 CET
   - fix version for LaTeX::ToUnicode
